# movies-platform

./: docker-compose.yml
k8s/: ingress.yaml  namespace.yaml  nginx-config.yaml  nginx-deployment.yaml  nginx-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  recommendation-config.yaml  recommendation-deployment.yaml  recommendation-service.yaml
nginx/: Dockerfile  nginx.conf
recommendation-service/: .env  Dockerfile  README.md  pyproject.toml
recommendation-service/src/app/: main.py
recommendation-service/src/app/api/v1/: recommendation.py
recommendation-service/src/app/core/: config.py  logging.py
recommendation-service/src/app/crud/: recommendation.py
recommendation-service/src/app/db/: seesion.py  session.py
recommendation-service/src/app/models/: recommendation.py
recommendation-service/src/app/schemas/: recommendation.py
recommendation-service/src/app/services/: recommendation_service.py
