[tool.poetry]
name = "recommendation-service"
version = "0.1.0"
description = "API RESTful de recomendaciones con FastAPI, SQLAlchemy y Docker"
authors = ["Hugo Saldarriaga hsaldarriaga@est.ups.edu.ec"]
license = "MIT"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
pydantic = "^2.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
coverage = "^6.5"
black = "^23.9"
flake8 = "^6.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
